--- a/css/site.css
+++ b/css/site.css
@@ -1,23 +1,25 @@
 :root {
-   /* #region grey */
-   --ab-theme-core: #adb5bd;
-   --ab-theme-100: hsl(210, 17%, 98%);
-   --ab-theme-150: hsl(210, 17%, 93%);
-   --ab-theme-200: hsl(210, 17%, 88%);
-   --ab-theme-300: hsl(210, 17%, 78%);
-   --ab-theme-400: hsl(210, 17%, 68%);
-   --ab-theme-500: hsl(210, 17%, 58%);
-   --ab-theme-600: hsl(210, 17%, 48%);
-   --ab-theme-700: hsl(210, 17%, 38%);
-   --ab-theme-800: hsl(210, 17%, 28%);
-   --ab-theme-850: hsl(210, 17%, 23%);
-   --ab-theme-900: hsl(210, 17%, 18%);
-   /* #endregion grey */
+    /* #region grey */
+    --ab-theme-core: #adb5bd;
+    --ab-theme-100: hsl(210, 17%, 98%);
+    --ab-theme-150: hsl(210, 17%, 93%);
+    --ab-theme-200: hsl(210, 17%, 88%);
+    --ab-theme-300: hsl(210, 17%, 78%);
+    --ab-theme-400: hsl(210, 17%, 68%);
+    --ab-theme-500: hsl(210, 17%, 58%);
+    --ab-theme-600: hsl(210, 17%, 48%);
+    --ab-theme-700: hsl(210, 17%, 38%);
+    --ab-theme-800: hsl(210, 17%, 28%);
+    --ab-theme-850: hsl(210, 17%, 23%);
+    --ab-theme-900: hsl(210, 17%, 18%);
+    /* #endregion grey */
 
- /* basic colors */
- --ab-dark-color: #212121;
- --ab-light-color: #deeefb;
- --ab-background-color: rgba(350, 250, 250, 0.8);
+    /* basic colors */
+    --ab-dark-color: #212121;
+    --ab-light-color: #deeefb;
+    --ab-background-color: rgba(350, 250, 250, 0.8);
+    --ab-grey-300: hsl(210, 17%, 78%);
+
 
 }
 
@@ -27,11 +29,14 @@
     --bs-btn-bg: var(--ab-theme-600);
     --bs-btn-border-color: var(--ab-theme-600);
     --bs-btn-hover-bg: var(--ab-theme-700);
+    --bs-btn-active-bg: var(--ab-theme-800);
+    --bs-btn-active-border-color: var(--ab-theme-800);
+
 }
 
 .navbar,
 .footer {
-background-color: var(--ab-theme-800);
+    background-color: var(--ab-theme-800);
 }
 
 .footer {
@@ -59,19 +64,15 @@ footer {
     flex-shrink: 0;
 }
 
-.socialicons {
+.socialIcons {
     font-size: 1.5rem;
-    padding-left: .5rem;
-    color: var(--ab-theme-700);
-    transition: color 0.2s;
+    transition: color 0.25s;
+    color: var(--ab-grey-300);
+    margin-left: 0.3rem;
 }
 
-.socialicons:hover {
-    color: yellow;
-}
-
-.app-logo {
-    max-width: 400px;
+.socialIcons:hover {
+    color: #FFF18D;
 }
 
 .checklist i {
@@ -82,4 +83,22 @@ footer {
 .devicons {
     font-size: 3.5rem;
     padding-left: .2rem;
+}
+
+.img-round {
+    border-radius: 2rem;
+    max-height: 60vh;
+
+}
+
+.img-shadow {
+    -webkit-box-shadow: 10px 10px 34px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 34px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 34px 0px rgba(0, 0, 0, 0.75)
+}
+
+.img-round-sm {
+    border-radius: 2rem;
+    max-height: 40vh;
+    margin-top: 2rem;
 }
